acomodando-pag-principal

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -11,18 +11,21 @@
     <link rel="icon" type="image/png" href="../assets/img/isotipo-marca.png"/>
 </head>
 <body>
-    <header>
+    <header class="menu">
+        <a href="../index.html"><img src="../assets/img/isotipo-marca.png" alt=""></a>
+
         <nav>
             <ul>
-                <li><a href="../pagina-principal.html"><img class="logo" src="../assets/img/isotipo-marca.png" alt="Logo institucional de la empresa"></a></li>
-                <li><a class="botones"href="#">¿QUIÉNES SOMOS?</a></li>
-                <li><a class="botones"href="./nuestros.productos.html">NUESTROS PRODUCTOS</a></li>
-                <li><a class="botones"href="./contacto.html">CONTACTO</a></li>
-                <li><a class="botones"href="./novedades.html">NOVEDADES</a></li>
-                <li><a href="../pages/futuras-paginas/futura-pagina.ingles.html"><img class="logo" src="../assets/img/reino-unido.png" alt="Bandera de Gran Bretaña utilizada para cambiar el idioma a Inglés"></a></li>
+                <li><a href="../pages/quienes-somos.html">¿QUIENES SOMOS?</a></li>
+                <li><a href="../pages/nuestros.productos.html">NUESTROS PRODUCTOS</a></li>
+                <li><a href="../pages/nuestros.productos.html">NOVEDADES</a></li>
+                <li><a href="../pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
+
+        <a href="../pages/futuras-paginas/futura-pagina.ingles.html"><img src="../assets/img/reino-unido.png" alt=""></a>
     </header>
+    
     <main class="fondo-quienes-somos">
         <article>
             <h1>ASI SOMOS, ASI TRABAJAMOS</h1>
