--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -72,7 +72,7 @@
 
             <div class="clientes-proveedores">
                 <ul>
-                    <li><a class="botones" href="./pages/futuras-paginas/futura-page-clientes.html">CLIENTES</a></li>
+                    <li><a class="botones" href="../pages/futuras-paginas/futura-page-clientes.html">CLIENTES</a></li>
                     <li><a class="botones" href="../pages/futuras-paginas/futura-page-proveedores.html">PROVEEDORES</a></li>
                 </ul>
             </div>
