--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--Banner  -->
 
     <section class="banner">
-        <a href="#">
+        <a href="./pages/contacto.html">
             <img class="foto-banner"src="./assets/img/Expo.png" alt="Banner frutos secos">
         </a>    
     </section>
